--- a/Lesson N4/Lesson N4_HW2/Lesson N4_HW2.csproj
+++ b/Lesson N4/Lesson N4_HW2/Lesson N4_HW2.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Lesson_N4_HW2</RootNamespace>
-    <AssemblyName>Lesson_N4_HW2</AssemblyName>
+    <AssemblyName>Lesson N4_HW2</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
